--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,13 +9,52 @@ include(ExternalProject)
 ## Setup project
 ## ----------------------------------------------------------------------------
 project(clong)
+
+## For convenience
 set(CLONG_ROOT ${CMAKE_SOURCE_DIR})
-set(LLVM_ROOT /usr/local/opt/llvm)
+
+## Directory containing third party packages
 set(THIRD_PARTY_DIR ${CLONG_ROOT}/third_party)
+
+## Temporary install dir for compiled third-party packages
 set(BUILD_INSTALL_DIR ${CMAKE_CURRENT_BINARY_DIR}/_install)
+
+## Detect compilers
+if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+  set(CLONG_IS_CLANG ON)
+elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+  set(CLONG_IS_GCC ON)
+elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
+  set(CLONG_IS_MSVC ON)
+endif()
+
+## Determine LLVM prefix (root) dir
+if (NOT DEFINED LLVM_ROOT)
+  if (WIN32)
+    ## For travis
+    if (IS_TRAVIS)
+      set(LLVM_ROOT ${CLONG_ROOT}/llvm-clang-msvc)
+    endif()
+  elseif (APPLE)
+    ## Assume LLVM has been installed using homebrew with standard location
+    set(LLVM_ROOT /usr/local/opt/llvm)
+  elseif (UNIX AND NOT APPLE)
+    ## Use llvm-config to query LLVM's root
+    execute_process(COMMAND llvm-config --prefix OUTPUT_VARIABLE LLVM_ROOT_RAW)
+    ## Make sure to strip the \n at the end
+    string(REGEX REPLACE "\n$" "" LLVM_ROOT "${LLVM_ROOT_RAW}")
+  endif()
+endif()
 
 ## Enable compile_commands.json
 set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
+
+## Logs
+## ----------------------------------------------------------------------------
+message(STATUS "LLVM_ROOT: ${LLVM_ROOT}")
+message(STATUS "CLONG_ROOT: ${CLONG_ROOT}")
+message(STATUS "THIRD_PARTY_DIR: ${THIRD_PARTY_DIR}")
+message(STATUS "BUILD_INSTALL_DIR: ${BUILD_INSTALL_DIR}")
 
 ## Packages
 ## ----------------------------------------------------------------------------
@@ -34,7 +73,7 @@ function(find_third_party_header_only_package PREFIX HPP PKG)
 endfunction()
 
 ## Look for a package, build it and install it locally
-function(find_third_party_package PREFIX DEP PKG OPTS)
+function(find_third_party_package PREFIX DEP PKG)
   message(STATUS "Looking for package: ${PKG}")
   set(PKG_DIR ${THIRD_PARTY_DIR}/${PKG})
   set(PKG_BUILD_DIR ${CMAKE_CURRENT_BINARY_DIR}/_third_party/${PKG})
@@ -43,25 +82,39 @@ function(find_third_party_package PREFIX DEP PKG OPTS)
     ## Init submodule and prepare for build
     execute_process(COMMAND git submodule update --init -- ${PKG_DIR})
     execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory ${PKG_BUILD_DIR})
+    ## Forward platform on Windows (might wanna use something more specialized here than _IS_MSVC..)
+    if (CLONG_IS_MSVC)
+      set(CMAKE_ARGS -A ${CMAKE_GENERATOR_PLATFORM})
+    endif()
     ## Tell where to install and make install messages silent
     execute_process(COMMAND
       ${CMAKE_COMMAND} ${PKG_DIR}
-        ${OPTS}
+        ${ARGN}
         -DCMAKE_INSTALL_PREFIX=${BUILD_INSTALL_DIR}
         -DCMAKE_INSTALL_MESSAGE=NEVER
+        -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
+        ${CMAKE_ARGS}
       WORKING_DIRECTORY ${PKG_BUILD_DIR})
     ## Build and install
-    execute_process(COMMAND ${CMAKE_COMMAND} --build ${PKG_BUILD_DIR})
-    execute_process(COMMAND ${CMAKE_COMMAND} --build ${PKG_BUILD_DIR} --target install)
+    execute_process(COMMAND
+      ${CMAKE_COMMAND} --build ${PKG_BUILD_DIR} --config ${CMAKE_BUILD_TYPE})
+    execute_process(COMMAND
+      ${CMAKE_COMMAND} --build ${PKG_BUILD_DIR} --config ${CMAKE_BUILD_TYPE} --target install)
     set(${PREFIX}_FOUND TRUE
       CACHE PATH "${PKG} installed")
   endif()
 endfunction()
 
+## CI cases
+if (IS_TRAVIS AND CLONG_IS_MSVC)
+  ## Use .dll for MSVC as we're using LLVM dynamically linked version!
+  set(GTEST_CMAKE_ARGS -DBUILD_SHARED_LIBS=ON)
+endif()
+
 ## Packages
 find_third_party_header_only_package(FILESYSTEM ghc/filesystem.hpp filesystem)
 find_third_party_header_only_package(FMT fmt/format.h fmt)
-find_third_party_package(GOOGLETEST lib/libgtest.h googletest -DBUILD_GMOCK=OFF)
+find_third_party_package(GTEST lib/libgtest.h googletest -DBUILD_GMOCK=OFF ${GTEST_CMAKE_ARGS})
 
 ## Setup library
 ## ----------------------------------------------------------------------------
@@ -70,8 +123,17 @@ find_third_party_package(GOOGLETEST lib/libgtest.h googletest -DBUILD_GMOCK=OFF)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden")
-
+## Seems that those flags are required for GNU-like compilers
+if (CLONG_IS_CLANG OR CLONG_IS_GCC)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti -fvisibility=hidden")
+endif()
+## Always use /MT (static) instead of /MD (dynamic)
+if (CLONG_IS_MSVC)
+  ## Make sure to apply to all CXX flags kind
+  foreach (FLAGS_KIND "" _DEBUG _RELEASE)
+    #string(REPLACE "/MD" "/MT" CMAKE_CXX_FLAGS${FLAGS_KIND} "${CMAKE_CXX_FLAGS${FLAGS_KIND}}")
+  endforeach()
+endif()
 
 ## Includes
 include_directories(
@@ -89,169 +151,44 @@ file(GLOB_RECURSE clong.src
 
 ## Link
 set(CLANG_LIBS
-  -lclangTooling
-  -lclangDriver
-  -lclangFrontend
-  -lclangParse
-  -lclangSerialization
-  -lclangSema
-  -lclangAnalysis
-  -lclangEdit
-  -lclangLex
-  -lclangAST
-  -lclangBasic
+  clangTooling
+  clangDriver
+  clangFrontend
+  clangParse
+  clangSerialization
+  clangSema
+  clangAnalysis
+  clangEdit
+  clangLex
+  clangAST
+  clangBasic
 )
 set(LLVM_LIBS
-  -lLLVMLTO
-  -lLLVMPasses
-  -lLLVMObjCARCOpts
-  -lLLVMMIRParser
-  -lLLVMSymbolize
-  -lLLVMDebugInfoPDB
-  -lLLVMDebugInfoDWARF
-  -lLLVMCoverage
-  -lLLVMMCA
-  -lLLVMTableGen
-  -lLLVMDlltoolDriver
-  -lLLVMXRay
-  -lLLVMOrcJIT
-  -lLLVMXCoreDisassembler
-  -lLLVMXCoreCodeGen
-  -lLLVMXCoreDesc
-  -lLLVMXCoreInfo
-  -lLLVMXCoreAsmPrinter
-  -lLLVMWebAssemblyDisassembler
-  -lLLVMWebAssemblyCodeGen
-  -lLLVMWebAssemblyDesc
-  -lLLVMWebAssemblyAsmPrinter
-  -lLLVMWebAssemblyAsmParser
-  -lLLVMWebAssemblyInfo
-  -lLLVMSystemZDisassembler
-  -lLLVMSystemZCodeGen
-  -lLLVMSystemZAsmParser
-  -lLLVMSystemZDesc
-  -lLLVMSystemZInfo
-  -lLLVMSystemZAsmPrinter
-  -lLLVMSparcDisassembler
-  -lLLVMSparcCodeGen
-  -lLLVMSparcAsmParser
-  -lLLVMSparcDesc
-  -lLLVMSparcInfo
-  -lLLVMSparcAsmPrinter
-  -lLLVMPowerPCDisassembler
-  -lLLVMPowerPCCodeGen
-  -lLLVMPowerPCAsmParser
-  -lLLVMPowerPCDesc
-  -lLLVMPowerPCInfo
-  -lLLVMPowerPCAsmPrinter
-  -lLLVMNVPTXCodeGen
-  -lLLVMNVPTXDesc
-  -lLLVMNVPTXInfo
-  -lLLVMNVPTXAsmPrinter
-  -lLLVMMSP430Disassembler
-  -lLLVMMSP430CodeGen
-  -lLLVMMSP430AsmParser
-  -lLLVMMSP430Desc
-  -lLLVMMSP430Info
-  -lLLVMMSP430AsmPrinter
-  -lLLVMMipsDisassembler
-  -lLLVMMipsCodeGen
-  -lLLVMMipsAsmParser
-  -lLLVMMipsDesc
-  -lLLVMMipsInfo
-  -lLLVMMipsAsmPrinter
-  -lLLVMLanaiDisassembler
-  -lLLVMLanaiCodeGen
-  -lLLVMLanaiAsmParser
-  -lLLVMLanaiDesc
-  -lLLVMLanaiAsmPrinter
-  -lLLVMLanaiInfo
-  -lLLVMHexagonDisassembler
-  -lLLVMHexagonCodeGen
-  -lLLVMHexagonAsmParser
-  -lLLVMHexagonDesc
-  -lLLVMHexagonInfo
-  -lLLVMBPFDisassembler
-  -lLLVMBPFCodeGen
-  -lLLVMBPFAsmParser
-  -lLLVMBPFDesc
-  -lLLVMBPFInfo
-  -lLLVMBPFAsmPrinter
-  -lLLVMARMDisassembler
-  -lLLVMARMCodeGen
-  -lLLVMARMAsmParser
-  -lLLVMARMDesc
-  -lLLVMARMInfo
-  -lLLVMARMAsmPrinter
-  -lLLVMARMUtils
-  -lLLVMAMDGPUDisassembler
-  -lLLVMAMDGPUCodeGen
-  -lLLVMAMDGPUAsmParser
-  -lLLVMAMDGPUDesc
-  -lLLVMAMDGPUInfo
-  -lLLVMAMDGPUAsmPrinter
-  -lLLVMAMDGPUUtils
-  -lLLVMAArch64Disassembler
-  -lLLVMAArch64CodeGen
-  -lLLVMAArch64AsmParser
-  -lLLVMAArch64Desc
-  -lLLVMAArch64Info
-  -lLLVMAArch64AsmPrinter
-  -lLLVMAArch64Utils
-  -lLLVMObjectYAML
-  -lLLVMLibDriver
-  -lLLVMOption
-  -lLLVMOptRemarks
-  -lLLVMWindowsManifest
-  -lLLVMTextAPI
-  -lLLVMFuzzMutate
-  -lLLVMX86Disassembler
-  -lLLVMX86AsmParser
-  -lLLVMX86CodeGen
-  -lLLVMGlobalISel
-  -lLLVMSelectionDAG
-  -lLLVMAsmPrinter
-  -lLLVMX86Desc
-  -lLLVMMCDisassembler
-  -lLLVMX86Info
-  -lLLVMX86AsmPrinter
-  -lLLVMX86Utils
-  -lLLVMMCJIT
-  -lLLVMLineEditor
-  -lLLVMInterpreter
-  -lLLVMExecutionEngine
-  -lLLVMRuntimeDyld
-  -lLLVMCodeGen
-  -lLLVMTarget
-  -lLLVMCoroutines
-  -lLLVMipo
-  -lLLVMInstrumentation
-  -lLLVMVectorize
-  -lLLVMScalarOpts
-  -lLLVMLinker
-  -lLLVMIRReader
-  -lLLVMAsmParser
-  -lLLVMInstCombine
-  -lLLVMBitWriter
-  -lLLVMAggressiveInstCombine
-  -lLLVMTransformUtils
-  -lLLVMAnalysis
-  -lLLVMProfileData
-  -lLLVMObject
-  -lLLVMMCParser
-  -lLLVMMC
-  -lLLVMDebugInfoCodeView
-  -lLLVMDebugInfoMSF
-  -lLLVMBitReader
-  -lLLVMCore
-  -lLLVMBinaryFormat
-  -lLLVMSupport
-  -lLLVMDemangle
-  -lcurses
-  -lxml2
-  -lm
-  -lz
+  LLVMOption
+  LLVMProfileData
+  LLVMMCParser
+  LLVMMC
+  LLVMBitReader
+  LLVMCore
+  LLVMBinaryFormat
+  LLVMSupport
+  LLVMDemangle
 )
+if (CLONG_IS_MSVC)
+  ## Required for those functions: GetFileVersionInfoSize and VerQueryValueW
+  set(LLVM_DEP_LIBS
+    version
+  )
+else()
+  ## Those ones are only available on UNIX
+  set(LLVM_DEP_LIBS
+    curses
+    xml2
+    m
+    z
+    pthread ## Required for linux
+  )
+endif()
 link_directories(
   ${LLVM_ROOT}/lib
   ${BUILD_INSTALL_DIR}/lib
@@ -259,7 +196,7 @@ link_directories(
 
 ## Bin
 add_executable(clong ${clong.src})
-target_link_libraries(clong ${CLANG_LIBS} ${LLVM_LIBS} )
+target_link_libraries(clong ${CLANG_LIBS} ${LLVM_LIBS} ${LLVM_DEP_LIBS})
 
 ## Tests
 ## ----------------------------------------------------------------------------
@@ -270,8 +207,12 @@ function(add_test_executable target src)
   add_executable(${target} ${src})
   ## We don't want test to be part of the main target
   set_target_properties(${target} PROPERTIES EXCLUDE_FROM_ALL TRUE)
+  ## Required by gtest
+  if (NOT CLONG_IS_MSVC)
+    set(GTEST_DEP_LIBS pthread)
+  endif()
   ## Link to gtest
-  target_link_libraries(${target} gtest gtest_main)
+  target_link_libraries(${target} gtest gtest_main ${GTEST_DEP_LIBS})
   ## Add it to the global `tests` target
   add_dependencies(tests ${target})
   ## Run the test when invoking the target
