--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,6 @@ osx_image: xcode10.2
 addons:
   apt:
     sources:
-      - ubuntu-toolchain-r-test
       - llvm-toolchain-trusty-6.0
 
 ## Install step
@@ -37,6 +36,7 @@ install:
       fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
         sudo apt update;
+        sudo apt autoremove;
         sudo apt install llvm-dev libclang-dev g++-8 clang-6.0 -y;
       fi
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
@@ -50,6 +50,7 @@ script:
   - cmake .. -DCMAKE_CXX_COMPILER=$TOOLSET_CXX -DIS_TRAVIS=ON $CMAKE_ARGS
   - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then
       cp _install/bin/gtest*.dll .;
+      cp Release/*.dll .;
     fi
   - cmake --build . $CMAKE_BUILD_ARGS
   - cmake --build . --target tests $CMAKE_BUILD_ARGS
