--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,8 @@ osx_image: xcode10.2
 addons:
   apt:
     sources:
-      - llvm-toolchain-trusty-6.0
+      - ubuntu-toolchain-r-test
+      - llvm-toolchain-xenial-8.0
 
 ## Install step
 install:
@@ -37,7 +38,7 @@ install:
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
         sudo apt update;
         sudo apt autoremove;
-        sudo apt install llvm-dev libclang-dev g++-8 clang-6.0 -y;
+        sudo apt install llvm-dev libclang-dev g++-8 clang-8.0 -y;
       fi
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
         HOMEBREW_NO_AUTO_UPDATE=1 brew install llvm;
@@ -50,8 +51,10 @@ script:
   - cmake .. -DCMAKE_CXX_COMPILER=$TOOLSET_CXX -DIS_TRAVIS=ON $CMAKE_ARGS
   - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then
       cp _install/bin/gtest*.dll .;
-      cp Release/*.dll .;
     fi
   - cmake --build . $CMAKE_BUILD_ARGS
+  - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then
+      cp Release/*.dll Release/*.lib .;
+    fi
   - cmake --build . --target tests $CMAKE_BUILD_ARGS
   - ctest . $CTEST_ARGS
