--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ matrix:
           env:
             - TOOLSET_CXX=clang++
 
+## Ubuntu 16.04
+dist: xenial
 ## For some reason, default osx image is not working with homebrew
 osx_image: xcode10.2
 
@@ -24,7 +26,7 @@ osx_image: xcode10.2
 addons:
   apt:
     sources:
-      - llvm-toolchain-trusty-8.0
+      - llvm-toolchain-xenial-8.0
       - ubuntu-toolchain-r-test
 
 ## Install step
