travis: Still fixing

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ install:
         git clone https://github.com/ccharly/clong.llvm-clang-8.0.0-win64-msvc-release-minimal.git llvm-clang-msvc;
       fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
+        sudo wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -;
         sudo apt-add-repository -y "ppa:ubuntu-toolchain-r/test";
         sudo apt-add-repository -y "deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-8.0 main"
         sudo apt update;
