--- a/.travis.yml
+++ b/.travis.yml
@@ -32,10 +32,13 @@ install:
       fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
         sudo wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -;
+        echo "LLVM";
+        sudo apt-add-repository -y "deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-6.0 main";
+        echo "Ubuntu";
         sudo apt-add-repository -y "ppa:ubuntu-toolchain-r/test";
         sudo apt update;
         sudo apt autoremove;
-        sudo apt install llvm-dev libclang-dev g++-8 clang-8.0 -y;
+        sudo apt install llvm-dev libclang-dev g++-8 clang-6.0 -y;
       fi
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
         HOMEBREW_NO_AUTO_UPDATE=1 brew install llvm;
