--- a/.travis.yml
+++ b/.travis.yml
@@ -17,15 +17,10 @@ matrix:
           env:
             - TOOLSET_CXX=clang++
 
+## Ubuntu 16.04
+dist: xenial
 ## For some reason, default osx image is not working with homebrew
 osx_image: xcode10.2
-
-## Configure packages sources
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-      - llvm-toolchain-trusty-6.0
 
 ## Install step
 install:
@@ -36,7 +31,11 @@ install:
         git clone https://github.com/ccharly/clong.llvm-clang-8.0.0-win64-msvc-release-minimal.git llvm-clang-msvc;
       fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
+        sudo wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -;
+        sudo apt-add-repository -y "deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-6.0 main";
+        sudo apt-add-repository -y "ppa:ubuntu-toolchain-r/test";
         sudo apt update;
+        sudo apt autoremove;
         sudo apt install llvm-dev libclang-dev g++-8 clang-6.0 -y;
       fi
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
@@ -53,4 +52,4 @@ script:
     fi
   - cmake --build . $CMAKE_BUILD_ARGS
   - cmake --build . --target tests $CMAKE_BUILD_ARGS
-  - ctest . $CTEST_ARGS
+  - ctest -VV . $CTEST_ARGS
